# Guard

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-ci.yml
dashboard/: pubspec.yaml
dashboard/lib/: main.dart
examples/: guard-20260615_223832-report.sarif
src/: main.rs  state.rs
src/cli/: mod.rs
src/owasp-scanner/: model.rs  service.rs
src/owasp-scanner/detectors/: eval.rs  hard_coded.rs  mod.rs  sql_injection.rs
src/server/: mod.rs  model.rs  service.rs
src/server/detectors/: eval.rs  hard_coded.rs  mod.rs  sql_injection.rs
src/server/detectors/golang/: exec_injection.rs  file_opertaions.rs  go_scanner.rs  hardcoded_secrets.rs  mod.rs  sql_injection.rs  tests.rs  utils.rs
src/server/detectors/javascript/: eval.rs  hard_coded.rs  js_scanner.rs  mod.rs  parser.rs  sql_injection.rs  tests.rs  utils.rs
src/server/detectors/shared/: common_parser.rs  mod.rs  sarif.rs
src/server/detectors/shared/js_and_ts/: mod.rs  utils.rs
src/server/detectors/typescript/: mod.rs  tests.rs  ts_scanner.rs
src/server/handlers/: handler.rs
src/server/models/: findings.rs  mod.rs  sarif.rs
