[package]
name = "guard"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
