[package]
name = "guard"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.3"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors","fs"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
open = "5"      
clap = { version = "4", features = ["derive"] } 
walkdir = "2"
axum = "0.8.9"
http = "1.4.1"
oxc = { version = "0.134.0", features = ["full"] }
oxc_ast = "0.134.0"
serde-sarif = "0.8.0"
chrono = "0.4.45"
tree-sitter = "0.25"
tree-sitter-go = "0.25"
streaming-iterator = "0.1.9"
